--- a/script_02.Rmd
+++ b/script_02.Rmd
@@ -9,6 +9,7 @@ Go to https://registrar.fas.harvard.edu/faculty-staff/courses/enrollment and scr
 Load **tidyverse**, **readxl** and **janitor** into your setup chunk. You may need to install the packages **readxl** and **janitor** if you haven't already.
 
 ```{r setup, include=FALSE}
+install.packages("readxl")
 library(tidyverse)
 library(readxl)
 library(janitor)
@@ -21,6 +22,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Once you have finished cleaning your data, figure out the course with the highest enrollment. And figure out how many students are enrolled in Gov 50. If you get a number much lower than 151, you have done something wrong . . .
 
+```{r, scene1}
+raw <- read_excel("raw_data/raw_data.xlsx")
+en_fall_2020 <- raw %>%
+  drop_na()
+
+```
 
 
 
